--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.10.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "scss": "^0.2.4",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
   },
